# guile-curl

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-hacking  TODO  bootstrap.conf  cfg.mk  configure.ac
.github/workflows/: ubuntu-22-04.yml  ubuntu-24-04.yml  ubuntu-bionic-guile-2.2.yml  ubuntu-focal-guile-3.0.yml
build-aux/: .gitignore  Makefile.am
doc/: .gitignore  Makefile.am  curl.texi  ex_http_header_charset.scm  ex_http_simple_get.scm  ex_http_simple_get_utf8.scm  ex_http_web_response.scm  guile-curl.texi
m4/: .gitignore  Makefile.am  gnulib-cache.m4  guile.m4
module/: curl.scm
src/: Makefile.am  const.c  const.h  curl.scm  curl.scm.in  func.c  func.h  main.c  type.c  type.h  visibility.h
test/: Makefile.am  bytevectors.scm  check_type.c  do_gdb  getinfo.scm  lib.scm  lib2.scm  profile.scm  setopt.scm  setopt.scm.in  stress.scm  t001_test.test
